--- a/24.11.2022.ipynb
+++ b/24.11.2022.ipynb
@@ -92,10 +92,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4af3ed08-6023-4837-ae70-c112182d8c8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the Sentence= Ashok Khanna\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "#import numpy as np\n",
     "s=str(input(\"Enter the Sentence=\"))\n",
@@ -108,6 +123,14 @@
     "#print(m)\n",
     "print(a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97e8d3ed-cd8a-4add-8791-26b8fddb64cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
